📝 define Polygon tag to swagger
